--- a/package.json
+++ b/package.json
@@ -23,5 +23,10 @@
   "homepage": "https://github.com/dhruvkp090/webCourse#readme",
   "devDependencies": {
     "lite-server": "^2.5.4"
+  },
+  "dependencies": {
+    "bootstrap": "^4.0.0",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.12.9"
   }
 }
