--- a/package.json
+++ b/package.json
@@ -1,33 +1,33 @@
 {
-  "name": "webcourse",
-  "version": "1.0.0",
-  "description": "Repository to follow along with the Web Dev course on coursera",
-  "main": "index.html",
-  "scripts": {
-    "start": "npm run lite",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lite": "lite-server"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/dhruvkp090/webCourse.git"
-  },
-  "keywords": [
-    "node"
-  ],
-  "author": "Dhruv Kumar Patwari",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/dhruvkp090/webCourse/issues"
-  },
-  "homepage": "https://github.com/dhruvkp090/webCourse#readme",
-  "devDependencies": {
-    "lite-server": "^2.5.4"
-  },
-  "dependencies": {
-    "bootstrap": "^4.3.1",
-    "jquery": "^3.5.0",
-    "popper.js": "^1.12.9"
-    "minimist": ">=1.2.3"
-  }
+	"name": "webcourse",
+	"version": "1.0.0",
+	"description": "Repository to follow along with the Web Dev course on coursera",
+	"main": "index.html",
+	"scripts": {
+		"start": "npm run lite",
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"lite": "lite-server"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/dhruvkp090/webCourse.git"
+	},
+	"keywords": [
+		"node"
+	],
+	"author": "Dhruv Kumar Patwari",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/dhruvkp090/webCourse/issues"
+	},
+	"homepage": "https://github.com/dhruvkp090/webCourse#readme",
+	"devDependencies": {
+		"lite-server": "^2.5.4"
+	},
+	"dependencies": {
+		"bootstrap": "^4.3.1",
+		"jquery": "^3.5.0",
+		"popper.js": "^1.12.9",
+		"minimist": ">=1.2.3"
+	}
 }
