--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
 	},
 	"dependencies": {
 		"bootstrap": "^4.3.1",
+		"bootstrap-social": "^5.1.1",
+		"font-awesome": "^4.7.0",
 		"jquery": "^3.5.0",
-		"popper.js": "^1.12.9",
-		"minimist": ">=1.2.3"
+		"minimist": ">=1.2.3",
+		"popper.js": "^1.14.7"
 	}
 }
