--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"scripts": {
 		"start": "npm run lite",
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"lite": "lite-server"
+		"lite": "lite-server",
+		"scss": "node-sass -o bootstrapStuff/Bootstrap4/conFusion/css/ bootstrapStuff/Bootstrap4/conFusion/css/"
 	},
 	"repository": {
 		"type": "git",
@@ -22,7 +23,8 @@
 	},
 	"homepage": "https://github.com/dhruvkp090/webCourse#readme",
 	"devDependencies": {
-		"lite-server": "^2.5.4"
+		"lite-server": "^2.5.4",
+		"node-sass": "^4.14.1"
 	},
 	"dependencies": {
 		"bootstrap": "^4.4.1",
